--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "@types/node": "^12.20.23",
     "@types/react": "^16.14.14",
     "@types/react-dom": "^16.9.14",
+    "axios": "^0.21.4",
     "framer-motion": "^4.1.17",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^3.11.0",
+    "react-query": "^3.21.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "type-fest": "^2.2.0",
     "typescript": "^3.9.10",
     "web-vitals": "^0.2.4"
   },
