--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "framer-motion": "^4.1.17",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-error-boundary": "^3.1.3",
     "react-icons": "^3.11.0",
     "react-query": "^3.21.1",
     "react-router-dom": "^5.3.0",
