Implement working backend for GET request

--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
 PGHOST='localhost'
-DATABASE_URL='postgresql://postgres@localhost:5432/ppz'
+DATABASE_URL='postgres://postgres@localhost:5432/ppz'
 PGUSER=postgres
 PGDATABASE=ppz
 PGPORT=5432
