--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "react-error-boundary": "^3.1.3",
     "react-icons": "^3.11.0",
     "react-query": "^3.21.1",
+    "react-query-auth": "^1.1.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "type-fest": "^2.2.0",
