--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^17.0.2",
     "react-error-boundary": "^3.1.3",
     "react-icons": "^3.11.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-query": "^3.21.1",
     "react-query-auth": "^1.1.0",
     "react-router-dom": "^5.3.0",
