--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "mocha": "^9.1.1",
     "nodemon": "^2.0.12",
     "pg": "^8.7.1",
+    "pg-format": "^1.0.4",
     "redis": "^3.1.2",
     "supertest": "^6.1.6"
   }
