--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mocha": "^9.1.1",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.12",
     "pg": "^8.7.1",
     "pg-format": "^1.0.4",
