--- a/client/package.json
+++ b/client/package.json
@@ -51,6 +51,7 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/react-hooks": "^7.0.2",
     "@types/react-router-dom": "^5.1.8",
     "msw": "^0.35.0"
   }
