--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "apicache": "^1.6.3",
     "chai": "^4.3.4",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
