--- a/client/package.json
+++ b/client/package.json
@@ -52,7 +52,9 @@
   },
   "devDependencies": {
     "@testing-library/react-hooks": "^7.0.2",
+    "@types/faker": "^5.5.9",
     "@types/react-router-dom": "^5.1.8",
+    "faker": "^5.5.3",
     "msw": "^0.35.0"
   }
 }
