--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "set NODE_ENV=dev&& nodemon server/index.js",
-    "test": "nyc mocha test/index.js -w"
+    "test": "set NODE_ENV=test&& mocha test/index.js -w"
   },
   "author": "",
   "license": "ISC",
