--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,11 +20,9 @@ workflows:
   # For more details on extending your workflow, see the configuration docs: https://circleci.com/docs/2.0/configuration-reference/#workflows
   sample:
     jobs:
-      - test:
+      - node/test:
           context:
-            - docker
-      - node/test
-        
+            - Docker
       - heroku/deploy-via-git:
           force: true # this parameter instructs the push to use a force flag when pushing to the heroku remote, see: https://devcenter.heroku.com/articles/git
           requires:
@@ -36,7 +34,7 @@ workflows:
               # only: master  # Uncomment this line
 
 jobs:
-  test:
+  node/test:
     docker:
       # - image: ericdo/ppz_node
       #   auth:
