--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -61,7 +61,7 @@ jobs:
             DOCKERIZE_VERSION: v0.6.1
       - run: echo $(ls)
       - run: echo 'export PATH=/usr/lib/postgresql/9.4/bin/:$PATH' >> $BASH_ENV
-      # - run: dockerize -wait tcp://localhost:5432 -timeout 1m
+      - run: dockerize -wait tcp://localhost:5432 -timeout 1m
       # - run: pg_restore -h localhost -p 5432 -U postgres -d ppz -C './database/scripts/init.sql'
       - run: psql -U postgres ppz < './database/scripts/init.sql'
       
