--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -63,7 +63,7 @@ jobs:
       - run: echo 'export PATH=/usr/lib/postgresql/9.4/bin/:$PATH' >> $BASH_ENV
       - run: dockerize -wait tcp://localhost:5432 -timeout 1m
       # - run: pg_restore -h localhost -p 5432 -U postgres -d ppz -C './database/scripts/init.sql'
-      - run: psql -h localhost -p 5432 -U postgres ppz < './database/scripts/init.sql'
+      - run: psql -h localhost -p 5432 -U postgres < './database/scripts/init.sql'
       
       # - run: npm install
       # - run:
