--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,11 +47,10 @@ jobs:
           POSTGRES_PASSWORD: postgres
       - image: circleci/redis
     environment:
-      DATABASE_URL: postgresql://root@localhost/ppz
+      DATABASE_URL: postgresql://postgres:postgres@localhost/ppz
       REDIS_URL: redis://localhost
     steps:
       - checkout
-      # Bundle install dependencies
       - run: sudo apt-get update
       - run: sudo apt install postgresql-client
       - run:
@@ -59,13 +58,7 @@ jobs:
           command: sudo wget https://github.com/jwilder/dockerize/releases/download/$DOCKERIZE_VERSION/dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz && sudo tar -C /usr/local/bin -xzvf dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz && rm dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz
           environment:
             DOCKERIZE_VERSION: v0.6.1
-      - run: echo $(ls)
       - run: echo 'export PATH=/usr/lib/postgresql/9.4/bin/:$PATH' >> $BASH_ENV
       - run: dockerize -wait tcp://localhost:5432 -timeout 1m
-      # - run: pg_restore -h localhost -p 5432 -U postgres -d ppz -C './database/scripts/init.sql'
       - run: psql -h localhost -p 5432 -U postgres < './database/scripts/init.sql'
       
-      # - run: npm install
-      # - run:
-      #     name: Run tests
-      #     command: npm test
