--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -61,4 +61,5 @@ jobs:
       - run: echo 'export PATH=/usr/lib/postgresql/9.4/bin/:$PATH' >> $BASH_ENV
       - run: dockerize -wait tcp://localhost:5432 -timeout 1m
       - run: psql -h localhost -p 5432 -U postgres < './database/scripts/init.sql'
+      - run: cd backend
       - run: npm test
