--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -49,7 +49,6 @@ jobs:
     environment: 
       DATABASE_URL: postgresql://postgres:postgres@localhost/ppz
       REDIS_URL: redis://localhost
-    working_directory: backend
     steps:
       - checkout
       - run: sudo apt-get update
@@ -63,5 +62,5 @@ jobs:
       - run: dockerize -wait tcp://localhost:5432 -timeout 1m
       - run: psql -h localhost -p 5432 -U postgres < './database/scripts/init.sql'
       - run: echo $(ls)
-      - run: npm install
-      - run: npm test
+      - run: cd backend && npm install
+      - run: cd backend && npm test
