--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -58,9 +58,15 @@ jobs:
           command: sudo wget https://github.com/jwilder/dockerize/releases/download/$DOCKERIZE_VERSION/dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz && sudo tar -C /usr/local/bin -xzvf dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz && rm dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz
           environment:
             DOCKERIZE_VERSION: v0.6.1
-      - run: echo 'export PATH=/usr/lib/postgresql/9.4/bin/:$PATH' >> $BASH_ENV
-      - run: dockerize -wait tcp://localhost:5432 -timeout 1m
-      - run: psql -h localhost -p 5432 -U postgres < './database/scripts/init.sql'
+      - run: 
+          name: Add Postgres commands to PATH
+          command: echo 'export PATH=/usr/lib/postgresql/9.4/bin/:$PATH' >> $BASH_ENV
+      - run: 
+          name: Wait for Postgres container to be ready
+          command: dockerize -wait tcp://localhost:5432 -timeout 1m
+      - run: 
+          run: Initialize database
+          command: psql -h localhost -p 5432 -U postgres < './database/scripts/init.sql'
       - run: echo $(ls)
       - run: cd backend && npm install
       - run: cd backend && npm test
