--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -74,6 +74,5 @@ jobs:
           command: psql -h localhost -p 5432 -U postgres < './database/scripts/init.sql'
 
       # Install npm libraries and run tests
-      - run: echo $(ls)
       - run: cd backend && npm install
-      - run: cd backend && npm test
+      - run: cd backend && npm run test:ci
