--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,7 +18,7 @@ workflows:
   # Inside the workflow, you provide the jobs you want to run, e.g this workflow runs the build-and-test job above.
   # CircleCI will run this workflow on every commit.
   # For more details on extending your workflow, see the configuration docs: https://circleci.com/docs/2.0/configuration-reference/#workflows
-  sample:
+  build-test-deploy:
     jobs:
       - build-and-test:
           context:
@@ -46,14 +46,9 @@ jobs:
       DATABASE_URL: postgresql://postgres:postgres@localhost/ppz
       REDIS_URL: redis://localhost
     steps:
-      # Checkout code from Github
       - checkout
-      
-      # Update and install packages
       - run: sudo apt-get update
       - run: sudo apt install postgresql-client
-
-      # Set up Postgres
       - run:
           name: install dockerize
           command: sudo wget https://github.com/jwilder/dockerize/releases/download/$DOCKERIZE_VERSION/dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz && sudo tar -C /usr/local/bin -xzvf dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz && rm dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz
@@ -68,7 +63,5 @@ jobs:
       - run: 
           name: Initialize database
           command: psql -h localhost -p 5432 -U postgres < './database/scripts/init.sql'
-
-      # Install npm libraries and run tests
       - run: cd backend && npm install
       - run: cd backend && npm run test:ci
