--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,6 +13,13 @@ orbs:
   # See here https://circleci.com/docs/2.0/env-vars/#setting-an-environment-variable-in-a-project
   heroku: circleci/heroku@1.2
 
+executors:
+  docker-publisher:
+    environment:
+      IMAGE_NAME: ericdo/ppz_node
+    docker:
+      - image: circleci/buildpack-deps:stretch
+
 workflows:
   # Below is the definition of your workflow.
   # Inside the workflow, you provide the jobs you want to run, e.g this workflow runs the build-and-test job above.
@@ -23,6 +30,14 @@ workflows:
       - build-and-test:
           context:
             - Docker
+      - publish-to-dockerhub:
+          context:
+            - Docker
+          requires:
+            - build-and-test
+          # filters:
+          #   branches:
+          #     only: master
       - heroku/deploy-via-git:
           force: true # this parameter instructs the push to use a force flag when pushing to the heroku remote, see: https://devcenter.heroku.com/articles/git
           requires:
@@ -65,3 +80,24 @@ jobs:
           command: psql -h localhost -p 5432 -U postgres < './database/scripts/init.sql'
       - run: cd backend && npm install
       - run: cd backend && npm run test:ci
+
+  publish-to-dockerhub:
+    executor: docker-publisher
+    steps:
+      - checkout
+      - setup_remote_docker
+      - run:
+          name: Build Docker image
+          command: |
+            docker build -t $IMAGE_NAME:latest .
+      - run:
+          name: Archive Docker image
+          command: docker save -o image.tar $IMAGE_NAME
+      - run:
+          name: Load archived Docker image
+          command: docker load -i image.tar
+      - run:
+          name: Publish Docker Image to Docker Hub
+          command: |
+            echo "$DOCKERHUB_PASSWORD" | docker login -u "$DOCKERHUB_USERNAME" --password-stdin
+            docker push $IMAGE_NAME:latest
