--- a/backend/package.json
+++ b/backend/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "set NODE_ENV=dev&& nodemon server/index.js",
+    "start:production": "set NODE_ENV=production&& nodemon server/index.js",
     "test": "set NODE_ENV=test&& mocha test/index.js -w",
     "test:ci": "set NODE_ENV=test&& nyc mocha test/index.js --exit"
   },
