--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "set NODE_ENV=dev&& nodemon server/index.js",
     "start:production": "set NODE_ENV=production&& nodemon server/index.js",
-    "test": "set NODE_ENV=test&& mocha test/index.js -w",
+    "test": "DOTENV_CONFIG_PATH=.env.test mocha test/index.js -w -r dotenv/config",
     "test:ci": "set NODE_ENV=test&& nyc mocha test/index.js --exit"
   },
   "author": "",
