--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,6 +5,7 @@ version: 2.1
 orbs:
   node: circleci/node@4.1
   heroku: circleci/heroku@1.2
+  aws-ecr: circleci/aws-ecr@7.3.0
 
 executors:
   docker-publisher:
@@ -27,6 +28,21 @@ workflows:
           filters:
             branches:
               only: master
+      - aws-ecr/build-and-push-image:
+          requires:
+            - build-and-test
+          account-url: AWS_ECR_ACCOUNT_URL_ENV_VAR_NAME
+          aws-access-key-id: ACCESS_KEY_ID_ENV_VAR_NAME
+          aws-secret-access-key: SECRET_ACCESS_KEY_ENV_VAR_NAME
+          create-repo: false
+          dockerfile: Dockerfile
+          path: ./backend/server
+          repo: ericdo/ppz_node
+          skip-when-tags-exist: false
+          tag: 'latest'
+          filters:
+            branches:
+              only: aws
       # - heroku/deploy-via-git:
       #     force: true
       #     requires:
