--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,29 +27,22 @@ workflows:
             - build-and-test
           filters:
             branches:
-              only: master
-      - aws-ecr/build-and-push-image:
-          requires:
-            - build-and-test
-          account-url: AWS_ECR_ACCOUNT_URL_ENV_VAR_NAME
-          aws-access-key-id: ACCESS_KEY_ID_ENV_VAR_NAME
-          aws-secret-access-key: SECRET_ACCESS_KEY_ENV_VAR_NAME
-          create-repo: false
-          dockerfile: Dockerfile
-          path: ./backend/server
-          repo: ericdo/ppz_node
-          skip-when-tags-exist: false
-          tag: 'latest'
-          # filters:
-          #   branches:
-          #     only: aws
-      # - heroku/deploy-via-git:
-      #     force: true
+              only: aws
+      # - aws-ecr/build-and-push-image:
       #     requires:
       #       - build-and-test
-      #     filters:
-      #       branches:
-      #         only: master
+      #     account-url: AWS_ECR_ACCOUNT_URL_ENV_VAR_NAME
+      #     aws-access-key-id: ACCESS_KEY_ID_ENV_VAR_NAME
+      #     aws-secret-access-key: SECRET_ACCESS_KEY_ENV_VAR_NAME
+      #     create-repo: false
+      #     dockerfile: Dockerfile
+      #     path: ./backend/server
+      #     repo: ericdo/ppz_node
+      #     skip-when-tags-exist: false
+      #     tag: 'latest'
+      #     # filters:
+      #     #   branches:
+      #     #     only: aws
 
 jobs:
   build-and-test:
