--- a/client/package.json
+++ b/client/package.json
@@ -27,7 +27,8 @@
     "react-scripts": "4.0.3",
     "type-fest": "^2.2.0",
     "typescript": "^3.9.10",
-    "web-vitals": "^0.2.4"
+    "web-vitals": "^0.2.4",
+    "zustand": "^3.6.8"
   },
   "scripts": {
     "start": "react-scripts start",
