--- a/ppz-mobile/package.json
+++ b/ppz-mobile/package.json
@@ -21,6 +21,7 @@
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
+    "babel-plugin-module-resolver": "^4.1.0",
     "expo": "~42.0.0",
     "expo-status-bar": "~1.0.4",
     "native-base": "3.2.1",
