--- a/ppz-mobile/package.json
+++ b/ppz-mobile/package.json
@@ -36,7 +36,8 @@
     "react-native-web": "~0.13.12",
     "styled-components": "^5.3.0",
     "styled-system": "^5.1.5",
-    "zustand": "^3.6.8"
+    "zustand": "^3.6.8",
+    "expo-secure-store": "~10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
