--- a/ppz-mobile/package.json
+++ b/ppz-mobile/package.json
@@ -24,20 +24,23 @@
     "axios": "^0.24.0",
     "babel-plugin-module-resolver": "^4.1.0",
     "expo": "~42.0.0",
+    "expo-secure-store": "~10.2.0",
     "expo-status-bar": "~1.0.4",
+    "i": "^0.3.7",
     "native-base": "3.2.1",
+    "npm": "^8.3.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
     "react-native-chart-kit": "^6.11.0",
+    "react-native-date-time-scroll-picker": "0.0.8",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.4.0",
     "react-native-svg": "12.1.1",
     "react-native-web": "~0.13.12",
     "styled-components": "^5.3.0",
     "styled-system": "^5.1.5",
-    "zustand": "^3.6.8",
-    "expo-secure-store": "~10.2.0"
+    "zustand": "^3.6.8"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
