--- a/ppz-mobile/package.json
+++ b/ppz-mobile/package.json
@@ -15,7 +15,11 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
+    "test": "jest",
     "eject": "expo eject"
+  },
+  "jest": {
+    "preset": "jest-expo"
   },
   "dependencies": {
     "@react-navigation/bottom-tabs": "^6.0.9",
@@ -27,6 +31,8 @@
     "expo-secure-store": "~10.2.0",
     "expo-status-bar": "~1.0.4",
     "i": "^0.3.7",
+    "jest": "^27.4.5",
+    "jest-expo": "^42.0.1",
     "native-base": "3.2.1",
     "npm": "^8.3.0",
     "react": "16.13.1",
