--- a/ppz-mobile/package.json
+++ b/ppz-mobile/package.json
@@ -44,6 +44,7 @@
     "react-native-screens": "~3.10.1",
     "react-native-svg": "12.1.1",
     "react-native-web": "0.17.1",
+    "react-query": "^3.34.7",
     "styled-components": "^5.3.0",
     "styled-system": "^5.1.5",
     "zustand": "^3.6.8"
