--- a/ppz-mobile/package.json
+++ b/ppz-mobile/package.json
@@ -47,7 +47,8 @@
     "react-query": "^3.34.7",
     "styled-components": "^5.3.0",
     "styled-system": "^5.1.5",
-    "zustand": "^3.6.8"
+    "zustand": "^3.6.8",
+    "@react-native-community/datetimepicker": "4.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
